fixed bug on tablet

--- a/src/app/pages/homepage/homepage.component.css
+++ b/src/app/pages/homepage/homepage.component.css
@@ -1,7 +1,6 @@
 html,body {
   width: 100%;
   height: 100%;
-  display: inline-block;
   overflow: hidden;
 }
 
@@ -142,7 +141,7 @@ img {
   }
 
   #truck{
-    position: relative;
+    position: fixed;
     right: 0%;
     bottom: 0;
     width: 20%;
